Install react-router-dom

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,10 @@
     "import/no-extraneous-dependencies": [
       "error",
       {
-        "devDependencies": true
+        "devDependencies": true,
+        "optionalDependencies": false,
+        "peerDependencies": false,
+        "packageDir": "./"
       }
     ],
     "react/react-in-jsx-scope": "off",
